# ChangeLog for dev-python/matplotlib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.64 2009/03/30 15:32:32 loki_val Exp $

  30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
  matplotlib-0.91.2.ebuild, matplotlib-0.91.4.ebuild,
  matplotlib-0.98.5.2.ebuild, matplotlib-0.98.5.2-r2.ebuild,
  matplotlib-0.98.5.2-r3.ebuild:
  Update dependencies w.r.t. bug 264230, fully-split-out poppler transition.

  14 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  matplotlib-0.91.2.ebuild, matplotlib-0.91.4.ebuild:
  Switch to EAPI 2

  09 Mar 2009; Sébastien Fabbro <bicatali@gentoo.org>
  matplotlib-0.98.5.2-r3.ebuild:
  Added latex-unicode for doc building when tetex or ptex are selected

  28 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  files/matplotlib-0.98.5.2-no-xv.patch, matplotlib-0.98.5.2-r3.ebuild:
  More documentation building fixes: added graphviz dependency, and applied
  patch on doc examples instead of regular examples

  27 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/matplotlib-0.98.5.2-no-xv.patch, matplotlib-0.98.5.2-r3.ebuild:
  Added more dependencies to build documentation and a patch to avoid to
  launch xv during doc compilation when imaging is installed. Closing bug
  #260446 and bug #260431

*matplotlib-0.98.5.2-r3 (25 Feb 2009)

  25 Feb 2009; Sébastien Fabbro <bicatali@gentoo.org>
  +files/matplotlib-0.98.5.2-literal.patch, +matplotlib-0.98.5.2-r3.ebuild:
  Re-added pyparsing (hopefully temporarily) for proper outputs and
  stix-fonts for ttf, but added media-fonts/texcm-ttf. More information on
  bundled packages, see bug #260025, thanks Michael Droettboom for
  explanations. Also now builds documentation from source (html and pdf),
  and added a src_test for regression. Finally added a small patch on string
  literal from Mandriva.

*matplotlib-0.98.5.2-r2 (25 Jan 2009)

  25 Jan 2009; Patrick Lauer <patrick@gentoo.org>