@@ -2,8 +2,8 @@ AUX matplotlib-0.98.5.2-literal.patch 308 RMD160 2d96faf45f2a163df5b7f68e3237178
 AUX matplotlib-0.98.5.2-no-xv.patch 368 RMD160 e0d3cf32f2e74f2f6b9dbcb1de603e5588d9be92 SHA1 a4671aac2912d32646d14245d2d25b3a088887b9 SHA256 c03edfaca5b01335b126b88de423923229ec9418d0f81093ff109004c155931d
 DIST matplotlib-0.98.5.2.tar.gz 11535286 RMD160 12c64fce5758259f10e31aa1c8e3b47152bda09f SHA1 fbce043555de4f5a34e2a47e200527720a90b370 SHA256 9234f10314ffa1774b33839f59bc25dfeb8fd899484c06980454cac4cdaf928a
 DIST users_guide_0.98.5.2.pdf 11535372 RMD160 c780a8a9de94470cb052f1a2567235596a573213 SHA1 de266d7b609a1cbe4fd321a074914e06f1e361a9 SHA256 470522fba9e874dad3cf74b70393bae33ffd7b29d81b2e865e6964316a5f804d
-EBUILD matplotlib-0.98.5.2-r2.ebuild 3710 RMD160 d3cfcf2f77c6e035258174359e895188085ed664 SHA1 513f830675d37a0ba6a52a745e77ce38f1044465 SHA256 96efd4b5a656400b6d30130b6ea0ac5a4e65071ab4d4791441adf4f636109380
-EBUILD matplotlib-0.98.5.2-r3.ebuild 4844 RMD160 15be69b4c725c77359cfd8825969cb23c99ebb3d SHA1 6f2b678374ba27edce10129ddf4952968e2482cc SHA256 7db2e1176b4d8c48994b5769d04aaffd3e4d9a0a51a47d598957c721c99fa140
+EBUILD matplotlib-0.98.5.2-r2.ebuild 3686 RMD160 493e3aeffa6466938c1f092e242743426b77c418 SHA1 e404371868540776f943edb2c1a229c12d963d0f SHA256 71f75e271de53b4ea43f9de1372e9b581856f35851f6dd0849aeb3d656c440d5
+EBUILD matplotlib-0.98.5.2-r3.ebuild 4775 RMD160 d9c649994699b9db6b8ac102ba13801cc3ab1e91 SHA1 53958393f7f9f6cda4dcf011c251334fd07f0a08 SHA256 2c3bab0a150267e5a34f9c316505fc0945a2b68a6512d7375b17eb3131618903
 EBUILD matplotlib-0.98.5.2.ebuild 3062 RMD160 f0f572963c6f8cb1af923f14556b3a2997a5462d SHA1 a02699b5ec924091c566ee98fbb8460ee58ad90b SHA256 accb12736b1256c2f8a2550691889a1f2826b4cdc4af6a086e8b50f02bf5571d
-MISC ChangeLog 13257 RMD160 c136c958c545921fb8bbbfc7d9d4bc8239c0ee3e SHA1 4408b5503427dfdf7c28d4ca0edcd44799554717 SHA256 1c6da585cc81d1a0ca89075eeac268d5720082b59cfa0e65b8677f5c187babc6
+MISC ChangeLog 13419 RMD160 4d686117c99e601423a64e3577dbdd05639a08b2 SHA1 3b98a45be508dc8a577e97837a23630ce12d3064 SHA256 2964a54e82c0b020a28e6ac3d0b5b4c0dfba91b7990b6f563bbd3608f759d28b
 MISC metadata.xml 657 RMD160 b3a3a414f9d7a2c0cf66e1d78364f7efbccbf1ee SHA1 247593a497bd9cb016edce60434a8a993eefe20c SHA256 3db1ec7b35c9f0ceff13e28395cbdb1f2f9b4c3e41c45dafba9e1a0975aae071
