@@ -1,6 +1,10 @@
 # ChangeLog for dev-python/matplotlib
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.64 2009/03/30 15:32:32 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/matplotlib/ChangeLog,v 1.65 2009/05/30 09:07:05 ulm Exp $
+
+  30 May 2009; Ulrich Mueller <ulm@gentoo.org>
+  matplotlib-0.98.5.2-r2.ebuild, matplotlib-0.98.5.2-r3.ebuild:
+  Remove app-text/tetex from dependencies, bug 227443.
 
   30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org>
   matplotlib-0.91.2.ebuild, matplotlib-0.91.4.ebuild,
